# lemonjuice

./: Cargo.toml
src/: bar.rs  block.rs  main.rs  text.rs
src/block/: error.rs  one_or_more.rs  stream.rs
src/text/: color.rs
