[package]
name = "lemonjuice"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9.x"
cairo-rs = { version = "0.8.x", features = ["xcb"] }
cairo-sys-rs = "0.9.x"
xcb-util = { version = "0.3.x", features = ["ewmh"] }
pango = "*"
pangocairo = "*"
libc = "0.2.x"
paste = "*"
async-std = "*"
futures-util = "*"
